--- a/src/main/resources/public/app.css
+++ b/src/main/resources/public/app.css
@@ -1,3 +1,38 @@
 .error {
   color: red;
 }
+
+.success {
+  color: green;
+}
+
+.edit {
+  background: #a8e6ff;
+  border-radius: 8px;
+  border: .4px solid #337ab7;
+  transition: all .2s linear;
+  margin: auto;
+  text-align: center;
+  padding: 3px;
+}
+
+.edit:hover {
+  background: transparent;
+  transform: scale(1.4);
+}
+
+
+.bottomNav {
+  background: rgba(20, 48, 72, .2);
+  border-radius: 8px;
+  border: .4px solid #337ab7;
+  transition: all .2s linear;
+  margin: auto;
+  text-align: center;
+  padding: 3px;
+}
+
+.bottomNav:hover {
+  background: transparent;
+  transform: scale(1.4);
+}
